--- a/gui-webview/package.json
+++ b/gui-webview/package.json
@@ -10,7 +10,7 @@
   "license": "See LICENSE file.",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node index.js",
     "build:watch": "webpack --watch",
     "build": "webpack -p --progress --colors",
     "lint-js": "eslint . --ignore-path ./public/bundle.js",
@@ -50,7 +50,6 @@
     "serve-favicon": "~2.3.0",
     "style-loader": "^0.13.1",
     "uglify-loader": "^1.4.0",
-    "webpack": "^3.6.0",
     "weui": "^1.1.1",
     "whatwg-fetch": "^2.0.2"
   },
@@ -64,6 +63,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-lodash-fp": "^2.1.3",
     "eslint-plugin-react": "^6.10.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "webpack": "^3.11.0"
   }
 }
